fix: text screen funcitonBox z-index

--- a/src/canvas/function-box.styl
+++ b/src/canvas/function-box.styl
@@ -3,6 +3,7 @@ global_prefix = '#screen-shoot'
 {global_prefix}
     position absolute
     display none
+    z-index 100
     .function-box
         height 40px
         line-height 40px
